I have finished the Listing Creation Step 2 ( adding the location and map component ) part, lets create the counter component in the nextpart

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,12 @@ body,
   /* For the future components */
 }
 
-
+.leaflet-bottom,
+.leaflet-top,
+.leaflet-control,
+.leaflet-pane{
+  z-index: 0 !important;
+}
 
 
 
